# new-shimeji

./: Cargo.toml  README.md  default.xml  shimeji.xsd
fuzz/: bad-filename.xml  missing-shimeji.xml
src/: app.rs  bucket.rs  file_loader.rs  loader.rs  main.rs  rgba.rs  shimeji.rs  xml_parser.rs
src/off_thread/: shimeji.rs
