[package]
  name    = "new-shimeji"
  version = "0.1.0"
  edition = "2021"

[dependencies]
  derive_more   = { version = "1.0.0", features = ["full"] }
  tray-item     = { version = "0.10.0", features = ["ksni"] }
  anyhow        = "1.0.93"
  log           = "0.4.22"
  png           = "0.17"
  simple_logger = "5.0.0"
  winit         = "0.30.5"
  itertools     = "0.13.0"
  xml           = "0.8.20"
  cfg-if        = "1.0.0"
  pixels        = "0.15.0"
